// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`macro emit bracket native method 1`] = `
"-- ▼ ReadonlySet.size ▼
local _size = 0
for _ in values do
	_size += 1
end
-- ▲ ReadonlySet.size ▲
workspace:SetAttribute("size", _size)
return nil
"
`;

exports[`macro emit builtin callee with coalescing prerequisites 1`] = `
"local _condition = tonumber(text)
if _condition == nil then
	_condition = 1
end
local value = math.floor(math.log10(_condition))
return nil
"
`;

exports[`macro emit captured local writes 1`] = `
"local change = function()
	x = 9
	return 2
end
local _left = x
local result = _left + change()
return nil
"
`;

exports[`macro emit closure parameter beside a pure math call 1`] = `
"local function gaussian(max)
	return function(x)
		return max * math.exp(x)
	end
end
return nil
"
`;

exports[`macro emit complex assignment base 1`] = `
"holder.part.Color = Color3.fromRGB(255, 0, 0)
return nil
"
`;

exports[`macro emit complex assignment base before prerequisites 1`] = `
"local _exp = holder.part
local _exp_1 = { 1 }
local _arg0 = function()
	return "name"
end
-- ▼ ReadonlyArray.map ▼
local _newValue = table.create(#_exp_1)
for _k, _v in _exp_1 do
	_newValue[_k] = _arg0(_v, _k - 1, _exp_1)
end
-- ▲ ReadonlyArray.map ▲
_exp.Name = _newValue[1]
return nil
"
`;

exports[`macro emit compound assignment with pure math 1`] = `
"object.angle += math.min(1, 2)
return nil
"
`;

exports[`macro emit effectful native receiver 1`] = `
"local _self = getPart()
-- ▼ ReadonlySet.size ▼
local _size = 0
for _ in values do
	_size += 1
end
-- ▲ ReadonlySet.size ▲
_self:SetAttribute("size", _size)
return nil
"
`;

exports[`macro emit immutable vector operands 1`] = `
"local result = a + b
return nil
"
`;

exports[`macro emit imported callee with optional argument 1`] = `
"local TS = _G[script]
local useValue = TS.import(script, script.Parent, "stableImports").useValue
local _result = object
if _result ~= nil then
	_result = _result.value
end
local result = useValue(_result)
return nil
"
`;

exports[`macro emit includes and isEmpty 1`] = `
"local result = table.find(array, 3) ~= nil and #array == 0
return nil
"
`;

exports[`macro emit includes property receiver 1`] = `
"local result = table.find(holder.values, 3) ~= nil
return nil
"
`;

exports[`macro emit index offset folding 1`] = `
"local result = table.remove(array, index())
return nil
"
`;

exports[`macro emit indexOf property operands 1`] = `
"local result = (table.find(holder.values, object.value) or 0) - 1
return nil
"
`;

exports[`macro emit known function with no external effects 1`] = `
"local function value()
	return 1
end
map.key = value()
return nil
"
`;

exports[`macro emit map callback reuse 1`] = `
"-- ▼ ReadonlyArray.map ▼
local _newValue = table.create(#array)
for _k, _v in array do
	_newValue[_k] = callback(_v, _k - 1, array)
end
-- ▲ ReadonlyArray.map ▲
local result = _newValue
return nil
"
`;

exports[`macro emit multiple array insertions 1`] = `
"local _arg0 = value()
local _arg1 = value()
-- ▼ Array.push ▼
table.insert(array, _arg0)
table.insert(array, _arg1)
-- ▲ Array.push ▲
return nil
"
`;

exports[`macro emit native method in a constructor 1`] = `
"local Example
do
	Example = setmetatable({}, {
		__tostring = function()
			return "Example"
		end,
	})
	Example.__index = Example
	function Example.new(...)
		local self = setmetatable({}, Example)
		return self:constructor(...) or self
	end
	function Example:constructor()
		self.track = animator:LoadAnimation(animation)
	end
end
return nil
"
`;

exports[`macro emit native method with argument prerequisites 1`] = `
"-- ▼ ReadonlySet.size ▼
local _size = 0
for _ in values do
	_size += 1
end
-- ▲ ReadonlySet.size ▲
workspace:SetAttribute("size", _size)
return nil
"
`;

exports[`macro emit native receiver rebinding 1`] = `
"local _self = part
local _exp = { 1 }
local _arg0 = function()
	part = Instance.new("Part")
	return 7
end
-- ▼ ReadonlyArray.map ▼
local _newValue = table.create(#_exp)
for _k, _v in _exp do
	_newValue[_k] = _arg0(_v, _k - 1, _exp)
end
-- ▲ ReadonlyArray.map ▲
_self:SetAttribute("value", _newValue[1])
return nil
"
`;

exports[`macro emit nested optional native calls 1`] = `
"local _result = model
if _result ~= nil then
	local _result_1 = model
	if _result_1 ~= nil then
		_result_1 = _result_1:GetAttribute("MaxHealth")
	end
	local _condition = _result_1
	if _condition == nil then
		_condition = props.maxHealth
	end
	_result:SetAttribute("Health", _condition)
end
return nil
"
`;

exports[`macro emit nested vector arithmetic 1`] = `
"local result = a - (b + c)
return nil
"
`;

exports[`macro emit optional bracket native method 1`] = `
"local _result = model
if _result ~= nil then
	-- ▼ ReadonlySet.size ▼
	local _size = 0
	for _ in values do
		_size += 1
	end
	-- ▲ ReadonlySet.size ▲
	_result:SetAttribute("size", _size)
end
return nil
"
`;

exports[`macro emit optional join separator 1`] = `
"local result = table.concat(array, if separator == nil then ", " else separator)
return nil
"
`;

exports[`macro emit optional native method 1`] = `
"local _result = model
if _result ~= nil then
	-- ▼ ReadonlySet.size ▼
	local _size = 0
	for _ in values do
		_size += 1
	end
	-- ▲ ReadonlySet.size ▲
	_result:SetAttribute("size", _size)
end
return nil
"
`;

exports[`macro emit optional native receiver rebinding 1`] = `
"local _result = model
if _result ~= nil then
	local _exp = { 1 }
	local _arg0 = function()
		model = nil
		return 7
	end
	-- ▼ ReadonlyArray.map ▼
	local _newValue = table.create(#_exp)
	for _k, _v in _exp do
		_newValue[_k] = _arg0(_v, _k - 1, _exp)
	end
	-- ▲ ReadonlyArray.map ▲
	_result:SetAttribute("value", _newValue[1])
end
return nil
"
`;

exports[`macro emit optional replaceable method 1`] = `
"local _result = object
if _result ~= nil then
	local _fn = _result.SetAttribute
	local _exp = { 1 }
	local _arg0 = function()
		object.SetAttribute = function() end
		return 7
	end
	-- ▼ ReadonlyArray.map ▼
	local _newValue = table.create(#_exp)
	for _k, _v in _exp do
		_newValue[_k] = _arg0(_v, _k - 1, _exp)
	end
	-- ▲ ReadonlyArray.map ▲
	_fn(_result, "value", _newValue[1])
end
return nil
"
`;

exports[`macro emit possibly empty math varargs 1`] = `
"local min = math.min
local _exp = min()
local _exp_1 = { 1 }
local _arg0 = function()
	return 2
end
-- ▼ ReadonlyArray.map ▼
local _newValue = table.create(#_exp_1)
for _k, _v in _exp_1 do
	_newValue[_k] = _arg0(_v, _k - 1, _exp_1)
end
-- ▲ ReadonlyArray.map ▲
local result = { _exp, _newValue[1] }
return nil
"
`;

exports[`macro emit receiver rebinding inside forEach 1`] = `
"local _exp = array
local _arg0 = function(value, index, original)
	array = {}
	assert(original ~= array)
end
for _k, _v in _exp do
	_arg0(_v, _k - 1, _exp)
end
return nil
"
`;

exports[`macro emit reduce callback reuse 1`] = `
"-- ▼ ReadonlyArray.reduce ▼
local _result = 0
for _i = 1, #array do
	_result = callback(_result, array[_i], _i - 1, array)
end
-- ▲ ReadonlyArray.reduce ▲
local result = _result
return nil
"
`;

exports[`macro emit replaceable library lookalike 1`] = `
"local library = {
	floor = function(n)
		return n
	end,
}
local _fn = library.floor
local _exp = { 1 }
local _arg0 = function()
	library.floor = function()
		return 99
	end
	return 2
end
-- ▼ ReadonlyArray.map ▼
local _newValue = table.create(#_exp)
for _k, _v in _exp do
	_newValue[_k] = _arg0(_v, _k - 1, _exp)
end
-- ▲ ReadonlyArray.map ▲
local result = _fn(_newValue[1])
return nil
"
`;

exports[`macro emit replaceable method lookalike 1`] = `
"local _fn = object.SetAttribute
-- ▼ ReadonlySet.size ▼
local _size = 0
for _ in values do
	_size += 1
end
-- ▲ ReadonlySet.size ▲
_fn(object, "size", _size)
return nil
"
`;

exports[`macro emit required join separator 1`] = `
"local result = table.concat(array, separator)
return nil
"
`;

exports[`macro emit scalar call arity 1`] = `
"local result = typeof((empty()))
return nil
"
`;

exports[`macro emit single array insertion 1`] = `
"table.insert(array, value())
return nil
"
`;

exports[`macro emit single map assignment 1`] = `
"map.key = value()
return nil
"
`;

exports[`macro emit stable imported assignment targets 1`] = `
"local TS = _G[script]
local lighting = TS.import(script, script.Parent, "stableImports").lighting
local function apply(settings)
	lighting.Brightness = settings.brightness
	lighting.FogEnd = settings.fogEnd
end
return nil
"
`;

exports[`macro emit stable this assignment 1`] = `
"local Example
do
	Example = setmetatable({}, {
		__tostring = function()
			return "Example"
		end,
	})
	Example.__index = Example
	function Example.new(...)
		local self = setmetatable({}, Example)
		return self:constructor(...) or self
	end
	function Example:constructor()
		self.value = 0
	end
	function Example:update()
		self.value = math.random()
	end
end
return nil
"
`;

exports[`macro emit string macro receiver 1`] = `
"local words = string.split(object.text, ",")
return nil
"
`;

exports[`macro emit tuple spread after explicit arguments 1`] = `
"local tuple = { 9 }
local _spread0 = unpack(tuple)
table.insert(array, 1, _spread0)
return nil
"
`;

exports[`macro emit uncaptured parameter beside a property read 1`] = `
"local function compare(value, object)
	return value + object.value
end
return nil
"
`;

exports[`macro emit vector receiver rebinding 1`] = `
"local result = a + change()
return nil
"
`;
